--- a/server/src/assembly/resources/conf/iotdb-engine.properties
+++ b/server/src/assembly/resources/conf/iotdb-engine.properties
@@ -293,10 +293,10 @@ continue_merge_after_reboot=false
 # When less than or equal to 0, timed merge is disabled.
 merge_interval_sec=0
 
-# When set to true, all merges becomes full merge (the whole SeqFiles are re-written despite how
-# much they are overflowed). This may increase merge overhead depending on how much the SeqFiles
-# are overflowed.
-force_full_merge=false
+## When set to true, all merges becomes full merge (the whole SeqFiles are re-written despite how
+## much they are overflowed). This may increase merge overhead depending on how much the SeqFiles
+## are overflowed.
+#force_full_merge=false
 
 # During a merge, if a chunk with less number of points than this parameter, the chunk will be
 # merged with its succeeding chunks even if it is not overflowed, until the merged chunks reach
@@ -309,15 +309,20 @@ merge_file_time_block=3600000
 
 # the strategy to merge unseq file into seq file.
 # there are current two strategies:INPLACE, SQUEEZE
-seq_merge_file_strategy=SQUEEZE
+# user can add or not
+overlapped_file_merge_strategy=SQUEEZE-APPEND_MEGRE
+SQUEEZE-FULL_MEGRE
+SQUEEZE-APPEND_MERGE
+INPLACE-FULL_MERGE
+INPLACE-APPEND_MERGE
 
 # the strategy to merge small files to large file.
 # current strategie:REGULARIZATION
-size_merge_file_strategy=REGULARIZATION
+small_file_merge_strategy=REGULARIZATION-POINT_RANGE
 
-# the strategy that decide whether a chunk is a small chunk.
-# there are current two strategies:POINT_RANGE, TIME_RANGE
-merge_size_selector_strategy=POINT_RANGE
+## the strategy that decide whether a chunk is a small chunk.
+## there are current two strategies:POINT_RANGE, TIME_RANGE
+#merge_size_selector_strategy=POINT_RANGE
 
 ####################
 ### Metadata Cache Configuration
